use document.scripts and updateStorage to fix #1
- instead of document.head.children to get 'src's
- seems to be timing issues
- made it faster too (1s instead of 3s)

--- a/popup.html
+++ b/popup.html
@@ -9,11 +9,14 @@
         color: snow;
         border: none;
         border-radius: 10px;
+        font-size: medium;
         transition: 0.5s;
       }
       body {
+        min-width: 150px;
         width: auto;
         padding: 10px;
+        text-align: center;
       }
       button {
         background: #555;
