WIP: example of sending messages between popup and content script

--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,7 @@
   </head>
   <body>
     <p id="message"></p>
-    <button id="check" onclick="openInNewTab('google.com')">Check scripts</button>    
+    <button id="check">Check scripts</button>    
     <script src="popup.js"></script>
   </body>
 </html>
