--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <style>
       * {
         font-family: Avenir, Arial, Helvetica, sans-serif;
@@ -33,6 +33,13 @@
         padding: 10px;
         animation: changing-colour 1s infinite alternate;
       }
+      #version-number-container {
+        padding-top: 0.5rem;
+      }
+      #version-number-container,
+      #version-number {
+        font-size: xx-small;
+      }
       @keyframes changing-colour {
         from {
           background: lime;
@@ -45,7 +52,17 @@
   </head>
   <body>
     <p id="message"></p>
-    <button id="check">Check scripts</button>    
+    <button id="check">Check scripts</button>
+    <div id="version-number-container" role="button">
+      You're using version
+      <a
+        id="version-number"
+        href="https://github.com/hchiam/urlvoid-firefox-extension/releases"
+        target="_blank"
+        title="See release notes"
+        >?</a
+      >
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
