enable scroll in firefox

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
         width: auto;
         min-height: var(--minHeight);
         padding: 10px;
-        overflow: hidden;
+        overflow: auto;
         text-align: center;
         display: grid;
         place-items: center;
